# research-cli

./: .env.example  .gitignore  README.md  agent.py  app.py  main.py  pyproject.toml  run.sh  stream.py
memory/: AGENTS.md
skills/image-generator/: SKILL.md
skills/image-generator/scripts/: generator.py
skills/semantic-retrieval/: SKILL.md
skills/semantic-retrieval/evals/: evals.json
skills/semantic-retrieval/scripts/: retrieve.py
skills/skill-optimizer/: SKILL.md
skills/skill-optimizer/assets/: optimizer.md
skills/skill-optimizer/scripts/: harness.py
skills/speech-analyze/: SKILL.md
skills/speech-analyze/evals/: evals.json
skills/speech-analyze/scripts/: speech.py
skills/speech-generator/: SKILL.md
skills/speech-generator/assets/: timbre.json  voice_list.json
skills/speech-generator/scripts/: generator.py  tts.py
skills/video-generator/: SKILL.md
skills/video-generator/evals/: evals.json
skills/video-generator/scripts/: generator.py
tests/: test_stream.py
tools/: custom_tools.py  web_search.py
